New api enum VideoDegradationPreferences.
Used to be webrtc::VideoSendStream::DegradationPreference, declared in
call/video_sendstream.h. Old name is kept for backwards compatibility.

Bug: webrtc:8830
Change-Id: Ib2793f21c96cd80e0893d8510c6f77482a1d08d1

--- a/api/video/BUILD.gn
+++ b/api/video/BUILD.gn
@@ -71,6 +71,13 @@ rtc_source_set("video_bitrate_allocation") {
   ]
 }
 
+rtc_source_set("video_degradation_preference") {
+  visibility = [ "*" ]
+  sources = [
+    "video_degradation_preference.h",
+  ]
+}
+
 rtc_source_set("video_stream_decoder") {
   visibility = [ "*" ]
   sources = [
