--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -222,6 +222,7 @@ rtc_source_set("video_stream_api") {
     "../api:libjingle_peerconnection_api",
     "../api:optional",
     "../api:transport_api",
+    "../api/video:video_degradation_preference",
     "../api/video:video_frame",
     "../api/video_codecs:video_codecs_api",
     "../common_video:common_video",
