--- a/modules/audio_device/BUILD.gn
+++ b/modules/audio_device/BUILD.gn
@@ -36,7 +36,7 @@ config("audio_device_warnings_config") {
 
       # See https://bugs.chromium.org/p/webrtc/issues/detail?id=6265
       # for -Wno-thread-safety-analysis
-      "-Wno-thread-safety-analysis",
+      # "-Wno-thread-safety-analysis",
     ]
   }
 }
