--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -206,6 +206,7 @@ rtc_static_library("rtc_internal_video_codecs") {
     ":rtc_media_base",
     ":rtc_software_fallback_wrappers",
     "..:webrtc_common",
+    "../api/video:video_bitrate_allocation",
     "../api/video:video_frame_i420",
     "../api/video_codecs:video_codecs_api",
     "../call:call_interfaces",
@@ -243,6 +244,7 @@ rtc_static_library("rtc_software_fallback_wrappers") {
   deps = [
     ":rtc_h264_profile_id",
     ":rtc_media_base",
+    "../api/video:video_bitrate_allocation",
     "../api/video_codecs:video_codecs_api",
     "../modules/video_coding:video_codec_interface",
     "../rtc_base:checks",
@@ -504,6 +506,7 @@ if (rtc_include_tests) {
       ":rtc_media_base",
       "..:webrtc_common",
       "../api:call_api",
+      "../api/video:video_bitrate_allocation",
       "../api/video:video_frame",
       "../api/video_codecs:video_codecs_api",
       "../call:call_interfaces",
@@ -658,6 +661,7 @@ if (rtc_include_tests) {
       "../api:mock_video_codec_factory",
       "../api/audio_codecs:builtin_audio_decoder_factory",
       "../api/audio_codecs:builtin_audio_encoder_factory",
+      "../api/video:video_bitrate_allocation",
       "../api/video:video_frame",
       "../api/video_codecs:builtin_video_decoder_factory",
       "../api/video_codecs:builtin_video_encoder_factory",
