--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -284,16 +284,15 @@ rtc_source_set("array_view") {
   ]
 }
 
+# TODO(bugs.webrtc.org/9078): Remove the target when all users depend on abseil
+# directly.
 rtc_source_set("optional") {
   visibility = [ "*" ]
   sources = [
-    "optional.cc",
     "optional.h",
   ]
   deps = [
-    ":array_view",
-    "../rtc_base:checks",
-    "../rtc_base:sanitizer",
+    "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
 
@@ -441,6 +440,9 @@ if (rtc_include_tests) {
 
     sources = [
       "array_view_unittest.cc",
+
+      # TODO(bugs.webrtc.org/8821): Remove optional_unittests when webrtc starts
+      # running absl unittest on each commit.
       "optional_unittest.cc",
       "ortc/mediadescription_unittest.cc",
       "ortc/sessiondescription_unittest.cc",
