--- a/test/fuzzers/BUILD.gn
+++ b/test/fuzzers/BUILD.gn
@@ -489,3 +489,14 @@ rtc_static_library("fuzz_data_helper") {
   ]
   visibility = [ ":*" ]  # Only targets in this file can depend on this.
 }
+
+webrtc_fuzzer_test("frame_buffer2_fuzzer") {
+  sources = [
+    "frame_buffer2_fuzzer.cc",
+  ]
+  deps = [
+    "../../modules/video_coding/",
+    "../../system_wrappers:system_wrappers",
+  ]
+  libfuzzer_options = [ "max_len=10000" ]
+}
