Add all remaining builders from client.webrtc to luci.webrtc.ci
Bug: chromium:749455
Change-Id: I68b5dd3a27bfeabc0bcdf6477e43a778818b7efc

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -257,26 +257,83 @@ buckets {
 
     # Android
 
+    builders { mixins: "android"  name: "Android32 (M Nexus5X)(dbg)" }
     builders { mixins: "android"  name: "Android32 (M Nexus5X)" }
+    builders { mixins: "android"  name: "Android64 (M Nexus5X)(dbg)" }
     builders { mixins: "android"  name: "Android64 (M Nexus5X)" }
+    builders { mixins: "android"  name: "Android32 Builder x86" }
+    builders { mixins: "android"  name: "Android32 Builder x86 (dbg)" }
+    builders { mixins: "android"  name: "Android64 Builder x64 (dbg)" }
+    builders {
+      name: "Android32 (more configs)"
+      mixins: "android"
+      recipe { name: "webrtc/more_configs" }
+    }
 
     # iOS
 
+    builders { mixins: "ios"  name: "iOS32 Debug" }
+    builders { mixins: "ios"  name: "iOS32 Release" }
+    builders { mixins: "ios"  name: "iOS64 Debug" }
+    builders { mixins: "ios"  name: "iOS64 Release" }
+    builders { mixins: "ios"  name: "iOS32 Sim Debug (iOS 9.0)" }
+    builders { mixins: "ios"  name: "iOS64 Sim Debug (iOS 9.0)" }
+    builders { mixins: "ios"  name: "iOS64 Sim Debug (iOS 10.0)" }
     builders {
       name: "iOS API Framework Builder"
-      mixins: "mac"
+      mixins: "ios"
       recipe { name: "webrtc/ios_api_framework" }
     }
 
     # Linux
 
+    builders { mixins: "linux"  name: "Linux32 Debug" }
+    builders { mixins: "linux"  name: "Linux32 Release" }
+    builders { mixins: "linux"  name: "Linux64 Debug" }
     builders { mixins: "linux"  name: "Linux64 Release" }
+    builders { mixins: "linux"  name: "Linux32 Debug (ARM)" }
+    builders { mixins: "linux"  name: "Linux32 Release (ARM)" }
+    builders { mixins: "linux"  name: "Linux64 Debug (ARM)" }
+    builders { mixins: "linux"  name: "Linux64 Release (ARM)" }
+    builders { mixins: "linux"  name: "Linux64 Release (GCC)" }
+    builders { mixins: "linux"  name: "Linux Asan" }
+    builders { mixins: "linux"  name: "Linux MSan" }
+    builders { mixins: "linux"  name: "Linux Tsan v2" }
+    builders { mixins: "linux"  name: "Linux UBSan" }
+    builders { mixins: "linux"  name: "Linux UBSan vptr" }
+    builders {
+      name: "Linux (more configs)"
+      mixins: "linux"
+      recipe { name: "webrtc/more_configs" }
+    }
+    builders {
+      name: "Linux64 Release (Libfuzzer)"
+      mixins: "linux"
+      recipe { name: "webrtc/libfuzzer" }
+    }
 
     # Mac
 
+    builders { mixins: "mac"  name: "Mac64 Debug" }
+    builders { mixins: "mac"  name: "Mac64 Release" }
+    builders { mixins: "mac"  name: "Mac Asan" }
+
     # Win
 
+    builders { mixins: "win"  name: "Win32 Debug" }
     builders { mixins: "win"  name: "Win32 Release" }
+    builders { mixins: "win"  name: "Win64 Debug" }
+    builders { mixins: "win"  name: "Win64 Release" }
+    builders { mixins: "win"  name: "Win32 Debug (Clang)" }
+    builders { mixins: "win"  name: "Win32 Release (Clang)" }
+    builders { mixins: "win"  name: "Win64 Debug (Clang)" }
+    builders { mixins: "win"  name: "Win64 Release (Clang)" }
+    builders { mixins: "win"  name: "Win32 ASan" }
+    builders {
+      name: "Win (more configs)"
+      mixins: "win"
+      recipe { name: "webrtc/more_configs" }
+    }
   }
 }
 
