Don't batch builds for important Release bots
This means that these CI builds will be made for every single revision without skipping.
It can be helpful to more easily see blame for bad commits, but it's mostly to have a baseline in binary sizes (see bug) for all revisions.

Note: Android and iOS bots contain a 'gsutil upload' step but it seems OK to run it non-serially because they push to a unique file name, based on the revision number (not on the build number)

Bug: webrtc:9205
Change-Id: I69ad64a3a2fc3f80abc425fe4490556bfcf56595

--- a/luci-scheduler.cfg
+++ b/luci-scheduler.cfg
@@ -96,6 +96,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "Android32 (M Nexus5X)"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -117,6 +121,10 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.webrtc.ci"
     builder: "Android64 (M Nexus5X)"
+  }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
   }
 }
 
@@ -206,6 +214,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "iOS64 Release"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -250,6 +262,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "iOS API Framework Builder"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -293,6 +309,10 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.webrtc.ci"
     builder: "Linux64 Release"
+  }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
   }
 }
 
@@ -448,6 +468,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "Mac64 Release"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -481,6 +505,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "Win32 Release"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -502,6 +530,10 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.webrtc.ci"
     builder: "Win64 Release"
+  }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
   }
 }
 
@@ -525,6 +557,10 @@ job {
     bucket: "luci.webrtc.ci"
     builder: "Win32 Release (Clang)"
   }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
+  }
 }
 
 job {
@@ -546,6 +582,10 @@ job {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.webrtc.ci"
     builder: "Win64 Release (Clang)"
+  }
+  triggering_policy: {
+    max_batch_size: 1
+    max_concurrent_invocations: 3
   }
 }
 
