Include audio in bandwidth statistics.
Bug: 10195
Change-Id: Ibe066fafdde693ded60ae33c2f4127408ba5e186

--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -524,6 +524,7 @@ if (rtc_include_tests) {
       "../rtc_base/third_party/base64",
       "../rtc_base/third_party/sigslot:sigslot",
       "../system_wrappers:metrics",
+      "../test:field_trial",
       "../test:fileutils",
       "//third_party/abseil-cpp/absl/memory",
       "//third_party/abseil-cpp/absl/strings",
