Adds WebRtcConfig interface
The WebRtcConfig interface allows providing custom field trials that
changes per instance of GoogCcFactory.

Bug: webrtc:10009
Change-Id: I520fff030d1c3c755455ec8f67896fe8a6b4d970

--- a/api/transport/BUILD.gn
+++ b/api/transport/BUILD.gn
@@ -52,6 +52,8 @@ rtc_static_library("goog_cc") {
   deps = [
     ":network_control",
     "../../modules/congestion_controller/goog_cc",
+    "../config:field_trial_default",
+    "../config:webrtc_config",
     "//third_party/abseil-cpp/absl/memory",
   ]
 }
