--- a/modules/congestion_controller/BUILD.gn
+++ b/modules/congestion_controller/BUILD.gn
@@ -37,6 +37,8 @@ rtc_static_library("congestion_controller") {
     ":transport_feedback",
     "..:module_api",
     "../..:webrtc_common",
+    "../../../api/config:field_trial_default",
+    "../../../api/config:webrtc_config",
     "../../api/transport:network_control",
     "../../api/units:data_rate",
     "../../api/units:timestamp",
