--- a/modules/congestion_controller/goog_cc/BUILD.gn
+++ b/modules/congestion_controller/goog_cc/BUILD.gn
@@ -32,6 +32,7 @@ rtc_static_library("goog_cc") {
     ":pushback_controller",
     "../..:module_api",
     "../../..:webrtc_common",
+    "../../../api/config:webrtc_config",
     "../../../api/transport:network_control",
     "../../../api/units:data_rate",
     "../../../api/units:data_size",
@@ -44,7 +45,6 @@ rtc_static_library("goog_cc") {
     "../../../rtc_base/experiments:alr_experiment",
     "../../../rtc_base/experiments:field_trial_parser",
     "../../../system_wrappers",
-    "../../../system_wrappers:field_trial",
     "../../bitrate_controller",
     "../../remote_bitrate_estimator",
     "../../rtp_rtcp:rtp_rtcp_format",
@@ -71,11 +71,11 @@ rtc_source_set("pushback_controller") {
     "congestion_window_pushback_controller.h",
   ]
   deps = [
+    "../../../api/config:webrtc_config",
     "../../../api/transport:network_control",
     "../../../api/units:data_size",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
-    "../../../system_wrappers:field_trial",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
@@ -87,12 +87,12 @@ rtc_source_set("alr_detector") {
   ]
   deps = [
     "../../..:webrtc_common",
+    "../../../api/config:webrtc_config",
     "../../../logging:rtc_event_log_api",
     "../../../logging:rtc_event_pacing",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:alr_experiment",
-    "../../../system_wrappers:field_trial",
     "../../pacing:interval_budget",
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -115,6 +115,7 @@ rtc_source_set("estimators") {
   ]
 
   deps = [
+    "../../../api/config:webrtc_config",
     "../../../api/units:data_rate",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
@@ -123,7 +124,6 @@ rtc_source_set("estimators") {
     "../../../rtc_base:rtc_numerics",
     "../../../rtc_base:safe_minmax",
     "../../../rtc_base/experiments:field_trial_parser",
-    "../../../system_wrappers:field_trial",
     "../../remote_bitrate_estimator",
     "../../rtp_rtcp:rtp_rtcp_format",
     "//third_party/abseil-cpp/absl/memory",
@@ -142,13 +142,13 @@ rtc_source_set("delay_based_rate_controller") {
   deps = [
     ":estimators",
     ":link_capacity_estimator",
+    "../../../api/config:webrtc_config",
     "../../../api/transport:network_control",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:field_trial_parser",
-    "../../../system_wrappers:field_trial",
     "../../../system_wrappers:metrics",
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -164,13 +164,13 @@ rtc_source_set("delay_based_bwe") {
 
   deps = [
     ":estimators",
+    "../../../api/config:webrtc_config",
     "../../../api/transport:network_control",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:field_trial_parser",
-    "../../../system_wrappers:field_trial",
     "../../../system_wrappers:metrics",
     "../../pacing",
     "../../remote_bitrate_estimator",
@@ -187,6 +187,7 @@ rtc_source_set("probe_controller") {
   ]
 
   deps = [
+    "../../../api/config:webrtc_config",
     "../../../api/transport:network_control",
     "../../../api/units:data_rate",
     "../../../api/units:time_delta",
@@ -196,7 +197,6 @@ rtc_source_set("probe_controller") {
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/system:unused",
-    "../../../system_wrappers:field_trial",
     "../../../system_wrappers:metrics",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
@@ -250,6 +250,8 @@ if (rtc_include_tests) {
       ":goog_cc",
       ":probe_controller",
       ":pushback_controller",
+      "../../../api/config:field_trial_default",
+      "../../../api/config:webrtc_config",
       "../../../api/transport:goog_cc",
       "../../../api/transport:network_control",
       "../../../api/transport:network_control_test",
@@ -261,7 +263,6 @@ if (rtc_include_tests) {
       "../../../rtc_base:rtc_base_tests_utils",
       "../../../rtc_base/experiments:alr_experiment",
       "../../../system_wrappers",
-      "../../../system_wrappers:field_trial",
       "../../../test:field_trial",
       "../../../test:test_support",
       "../../../test/scenario",
@@ -288,6 +289,7 @@ if (rtc_include_tests) {
       ":goog_cc",
       ":probe_controller",
       ":pushback_controller",
+      "../../../api/config:webrtc_config",
       "../../../api/transport:goog_cc",
       "../../../api/transport:network_control",
       "../../../api/transport:network_control_test",
@@ -296,7 +298,6 @@ if (rtc_include_tests) {
       "../../../rtc_base:rtc_base_approved",
       "../../../rtc_base/experiments:alr_experiment",
       "../../../system_wrappers",
-      "../../../system_wrappers:field_trial",
       "../../../test:field_trial",
       "../../../test:test_support",
       "../../../test/scenario",
