--- a/modules/remote_bitrate_estimator/BUILD.gn
+++ b/modules/remote_bitrate_estimator/BUILD.gn
@@ -129,6 +129,7 @@ if (rtc_include_tests) {
       "..:module_api_public",
       "../..:webrtc_common",
       "../../api:libjingle_peerconnection_api",
+      "../../api/config:field_trial_default",
       "../../api/transport:network_control",
       "../../logging:mocks",
       "../../rtc_base:checks",
