Adds repeating task class.
This CL adds a single class to manage the use case of having a task
that repeats itself by a fixed or variable interval. It replaces the
repeating task previously locally defined for rtp transport controller
send as well as the cancelable periodic task. Furthermore, it is
introduced where one off repeating tasks were created before.

It provides the currently used functionality of the cancelable periodic
task, but not some of the unused features, such as allowing cancellation
of tasks before they are started and cancellation of a task after the
owning task queue has been destroyed.

Bug: webrtc:9883
Change-Id: Ifa7edee836c2a64fce16a7d0f682eb09c879eaca

--- a/call/BUILD.gn
+++ b/call/BUILD.gn
@@ -143,6 +143,7 @@ rtc_source_set("rtp_sender") {
     "../modules/video_coding:video_codec_interface",
     "../rtc_base:checks",
     "../rtc_base:rate_limiter",
+    "../rtc_base:repeating_task",
     "../rtc_base:rtc_base",
     "../rtc_base:rtc_base_approved",
     "../rtc_base:rtc_task_queue",
