--- a/modules/video_coding/BUILD.gn
+++ b/modules/video_coding/BUILD.gn
@@ -285,6 +285,7 @@ rtc_source_set("video_coding_utility") {
     "../../common_video",
     "../../modules/rtp_rtcp",
     "../../rtc_base:checks",
+    "../../rtc_base:repeating_task",
     "../../rtc_base:rtc_base_approved",
     "../../rtc_base:rtc_numerics",
     "../../rtc_base:rtc_task_queue",
