--- a/BUILD.gn
+++ b/BUILD.gn
@@ -58,6 +58,7 @@ if (!build_with_chromium) {
         "modules/video_capture:video_capture_internal_impl",
         "pc:peerconnection_unittests",
         "pc:rtc_pc_unittests",
+        "rtc_base:repeating_task_unittests",
         "stats:rtc_stats_unittests",
         "system_wrappers:system_wrappers_unittests",
         "test",
@@ -521,6 +522,7 @@ if (rtc_include_tests) {
     testonly = true
     deps = [
       "modules/congestion_controller/goog_cc:goog_cc_slow_tests",
+      "rtc_base:repeating_task_unittests",
       "test:test_main",
     ]
   }
