--- a/modules/rtp_rtcp/BUILD.gn
+++ b/modules/rtp_rtcp/BUILD.gn
@@ -251,8 +251,8 @@ rtc_source_set("rtcp_transceiver") {
     "../../api:transport_api",
     "../../api/video:video_bitrate_allocation",
     "../../rtc_base:checks",
+    "../../rtc_base:repeating_task",
     "../../rtc_base:rtc_base_approved",
-    "../../rtc_base:rtc_cancelable_task",
     "../../rtc_base:rtc_task_queue",
     "../../system_wrappers",
     "//third_party/abseil-cpp/absl/memory",
