--- a/video/BUILD.gn
+++ b/video/BUILD.gn
@@ -83,6 +83,7 @@ rtc_static_library("video") {
     "../modules/video_coding:video_codec_interface",
     "../rtc_base:checks",
     "../rtc_base:rate_limiter",
+    "../rtc_base:repeating_task",
     "../rtc_base:stringutils",
     "../rtc_base/experiments:alr_experiment",
     "../rtc_base/experiments:quality_scaling_experiment",
@@ -195,6 +196,7 @@ rtc_source_set("video_stream_encoder_impl") {
     "../rtc_base:criticalsection",
     "../rtc_base:logging",
     "../rtc_base:macromagic",
+    "../rtc_base:repeating_task",
     "../rtc_base:rtc_base_approved",
     "../rtc_base:rtc_event",
     "../rtc_base:rtc_numerics",
