Add 'AudioPacket' notification to media transport interface.
So far, base channel was only notifying about 'first audio packet' when
RTP was used, and it never notified about it when media_transport
interface was used. This change adds a sigslot to notify about a new
media packet to the media transport interface.

Bug: webrtc:9719
Change-Id: Ie9230c407f35b1aaa71ba71008ac34ba8869e2d4

--- a/api/BUILD.gn
+++ b/api/BUILD.gn
@@ -173,6 +173,7 @@ rtc_static_library("libjingle_peerconnection_api") {
     "transport:network_control",
     "video:encoded_image",
     "video:video_frame",
+    "//rtc_base/third_party/sigslot:sigslot",
     "//third_party/abseil-cpp/absl/strings",
     "//third_party/abseil-cpp/absl/types:optional",
 
