Move creation of RtpTransportControllerSend out of Call::Create
Instead, it is passed (with ownership) in CallConfig. This is a small
step in the direction of unifying Call-related RtpTransport classes
with RtpTransportInternal.

Bug: webrtc:7135
Change-Id: Ia0428d78ab29e5f7177ed63bfbb94b21c9a0ebe4

--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -594,6 +594,8 @@ if (rtc_include_tests) {
       "../api/test/video:function_video_factory",
       "../api/units:time_delta",
       "../api/video:video_frame_i420",
+      "../call:mock_rtp_interfaces",
+      "../call:rtp_sender",
       "../modules/audio_processing:api",
       "../modules/audio_processing:mocks",
       "../modules/rtp_rtcp",
