--- a/pc/BUILD.gn
+++ b/pc/BUILD.gn
@@ -501,6 +501,7 @@ if (rtc_include_tests) {
       "../p2p:rtc_p2p",
       "../rtc_base:checks",
       "../rtc_base:gunit_helpers",
+      "../rtc_base:repeating_task",
       "../rtc_base:rtc_base",
       "../rtc_base:rtc_base_approved",
       "../rtc_base:rtc_task_queue",
