--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -538,22 +538,19 @@ rtc_source_set("rtc_task_queue_api") {
   ]
 }
 
-rtc_source_set("rtc_cancelable_task") {
+rtc_source_set("repeating_task") {
   sources = [
-    "cancelable_periodic_task.h",
-    "cancelable_task_handle.cc",
-    "cancelable_task_handle.h",
+    "repeating_task.cc",
+    "repeating_task.h",
   ]
   deps = [
-    ":checks",
     ":logging",
-    ":macromagic",
-    ":ptr_util",
-    ":refcount",
-    ":rtc_task_queue",
-    ":safe_conversions",
+    ":rtc_task_queue_api",
     ":sequenced_task_checker",
     ":thread_checker",
+    ":timeutils",
+    "../api/units:time_delta",
+    "../api/units:timestamp",
     "//third_party/abseil-cpp/absl/memory",
   ]
 }
@@ -1429,7 +1426,6 @@ if (rtc_include_tests) {
     testonly = true
 
     sources = [
-      "cancelable_periodic_task_unittest.cc",
       "task_queue_unittest.cc",
     ]
     deps = [
@@ -1437,7 +1433,6 @@ if (rtc_include_tests) {
       ":rtc_base_approved",
       ":rtc_base_tests_main",
       ":rtc_base_tests_utils",
-      ":rtc_cancelable_task",
       ":rtc_task_queue",
       ":rtc_task_queue_for_test",
       "../test:test_support",
@@ -1445,6 +1440,18 @@ if (rtc_include_tests) {
     ]
   }
 
+  rtc_source_set("repeating_task_unittests") {
+    testonly = true
+    sources = [
+      "repeating_task_unittest.cc",
+    ]
+    deps = [
+      ":repeating_task",
+      ":rtc_base_approved",
+      "../test:test_support",
+      "//third_party/abseil-cpp/absl/memory",
+    ]
+  }
   rtc_source_set("sequenced_task_checker_unittests") {
     testonly = true
 
