--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -561,11 +561,10 @@ rtc_source_set("rtc_cancelable_task") {
 
 if (rtc_enable_libevent) {
   rtc_source_set("rtc_task_queue_libevent") {
-    visibility = [ ":rtc_task_queue_impl" ]
+    visibility = [ "../api/task_queue:task_queue_default_factory" ]
     sources = [
       "task_queue_libevent.cc",
-      "task_queue_posix.cc",
-      "task_queue_posix.h",
+      "task_queue_libevent.h",
     ]
     deps = [
       ":checks",
@@ -579,7 +578,9 @@ if (rtc_enable_libevent) {
       ":rtc_task_queue_api",
       ":safe_conversions",
       ":timeutils",
+      "../api/task_queue:task_queue_factory",
       "system:unused",
+      "//third_party/abseil-cpp/absl/memory",
     ]
     if (rtc_build_libevent) {
       deps += [ "//base/third_party/libevent" ]
@@ -589,11 +590,10 @@ if (rtc_enable_libevent) {
 
 if (is_mac || is_ios) {
   rtc_source_set("rtc_task_queue_gcd") {
-    visibility = [ ":rtc_task_queue_impl" ]
+    visibility = [ "../api/task_queue:task_queue_default_factory" ]
     sources = [
       "task_queue_gcd.cc",
-      "task_queue_posix.cc",
-      "task_queue_posix.h",
+      "task_queue_gcd.h",
     ]
     deps = [
       ":checks",
@@ -601,6 +601,7 @@ if (is_mac || is_ios) {
       ":ptr_util",
       ":refcount",
       ":rtc_task_queue_api",
+      "../api/task_queue:task_queue_factory",
     ]
   }
 }
@@ -647,29 +648,42 @@ rtc_source_set("rtc_task_queue_stdlib") {
   ]
 }
 
+rtc_source_set("task_queue_global_factory") {
+  visibility = [ "*" ]
+  sources = [
+    "task_queue_global_factory.cc",
+  ]
+  public = [
+    "task_queue_global_factory.h",
+  ]
+  deps = [
+    ":checks",
+    "../api/task_queue:task_queue_default_factory",
+    "../api/task_queue:task_queue_factory",
+  ]
+}
+
 rtc_source_set("rtc_task_queue_impl") {
   visibility = [ "*" ]
-  if (rtc_enable_libevent) {
-    deps = [
-      ":rtc_task_queue_libevent",
-    ]
-  } else {
-    if (is_mac || is_ios) {
+  if (is_win) {
+    if (current_os == "winuwp") {
       deps = [
-        ":rtc_task_queue_gcd",
+        ":rtc_task_queue_stdlib",
+      ]
+    } else {
+      deps = [
+        ":rtc_task_queue_win",
       ]
     }
-    if (is_win) {
-      if (current_os == "winuwp") {
-        deps = [
-          ":rtc_task_queue_stdlib",
-        ]
-      } else {
-        deps = [
-          ":rtc_task_queue_win",
-        ]
-      }
-    }
+  } else {
+    deps = [
+      ":rtc_task_queue_api",
+      ":task_queue_global_factory",
+      "../api/task_queue:task_queue_factory",
+    ]
+    sources = [
+      "task_queue.cc",
+    ]
   }
 }
 
