--- a/api/task_queue/BUILD.gn
+++ b/api/task_queue/BUILD.gn
@@ -14,3 +14,22 @@ rtc_source_set("task_queue") {
     "queued_task.h",
   ]
 }
+
+# TODO(bugs.webrtc.org/10191): Merge the target into task_queue target above
+# when support for link-time injection is dropped.
+rtc_source_set("task_queue_factory") {
+  visibility = [ "*" ]
+  public = [
+    "task_queue_base.h",
+    "task_queue_factory.h",
+  ]
+  sources = [
+    "task_queue_base.cc",
+  ]
+
+  deps = [
+    ":task_queue",
+    "../../rtc_base:checks",
+    "//third_party/abseil-cpp/absl/base:core_headers",
+  ]
+}
