Skeleton implementation of multilog_analyzer for visualizing multiple RTCEventLogs.
Bug: webrtc:10102
Change-Id: I2280a12e6e9b39aea0c3b4e341b3e734b863cd61

--- a/rtc_tools/BUILD.gn
+++ b/rtc_tools/BUILD.gn
@@ -241,6 +241,8 @@ if (!build_with_chromium) {
       sources = [
         "event_log_visualizer/analyzer.cc",
         "event_log_visualizer/analyzer.h",
+        "event_log_visualizer/multilog_analyzer.cc",
+        "event_log_visualizer/multilog_analyzer.h",
         "event_log_visualizer/plot_base.cc",
         "event_log_visualizer/plot_base.h",
         "event_log_visualizer/plot_protobuf.cc",
