--- a/logging/BUILD.gn
+++ b/logging/BUILD.gn
@@ -291,6 +291,7 @@ if (rtc_enable_protobuf) {
   rtc_static_library("rtc_event_log_parser") {
     visibility = [ "*" ]
     sources = [
+      "rtc_event_log/logged_events.cc",
       "rtc_event_log/logged_events.h",
       "rtc_event_log/rtc_event_log_parser.cc",
       "rtc_event_log/rtc_event_log_parser.h",
@@ -307,6 +308,9 @@ if (rtc_enable_protobuf) {
       ":rtc_event_log_proto",
       ":rtc_stream_config",
       "../api:libjingle_peerconnection_api",
+      "../api/units:data_rate",
+      "../api/units:time_delta",
+      "../api/units:timestamp",
       "../call:video_stream_api",
       "../modules/audio_coding:audio_network_adaptor",
       "../modules/congestion_controller/rtp:transport_feedback",
