--- a/test/scenario/network/BUILD.gn
+++ b/test/scenario/network/BUILD.gn
@@ -10,14 +10,62 @@ import("../../../webrtc.gni")
 
 rtc_source_set("emulated_network") {
   sources = [
+    "cross_traffic.cc",
+    "cross_traffic.h",
+    "fake_network_socket.cc",
+    "fake_network_socket.h",
+    "fake_network_socket_server.cc",
+    "fake_network_socket_server.h",
     "network_emulation.cc",
     "network_emulation.h",
+    "network_emulation_manager.cc",
+    "network_emulation_manager.h",
   ]
   deps = [
+    "../:column_printer",
     "../../../api:simulated_network_api",
+    "../../../api/units:data_rate",
+    "../../../api/units:data_size",
+    "../../../api/units:time_delta",
     "../../../api/units:timestamp",
     "../../../rtc_base:rtc_base",
+    "../../../rtc_base:rtc_task_queue_api",
+    "../../../rtc_base:safe_minmax",
+    "../../../rtc_base/third_party/sigslot:sigslot",
+    "../../../system_wrappers:system_wrappers",
     "//third_party/abseil-cpp/absl/memory:memory",
     "//third_party/abseil-cpp/absl/types:optional",
+  ]
+}
+
+rtc_source_set("network_emulation_unittest") {
+  testonly = true
+  sources = [
+    "network_emulation_unittest.cc",
+  ]
+  deps = [
+    ":emulated_network",
+    "../../../api:simulated_network_api",
+    "../../../call:simulated_network",
+    "../../../rtc_base:logging",
+    "../../../rtc_base:rtc_event",
+    "../../../test:test_support",
+    "//third_party/abseil-cpp/absl/memory:memory",
+  ]
+}
+
+rtc_source_set("cross_traffic_unittest") {
+  testonly = true
+  sources = [
+    "cross_traffic_unittest.cc",
+  ]
+  deps = [
+    ":emulated_network",
+    "../../../api:simulated_network_api",
+    "../../../call:simulated_network",
+    "../../../rtc_base:logging",
+    "../../../rtc_base:rtc_event",
+    "../../../test:test_support",
+    "//third_party/abseil-cpp/absl/memory:memory",
   ]
 }
