--- a/rtc_base/BUILD.gn
+++ b/rtc_base/BUILD.gn
@@ -647,6 +647,25 @@ rtc_source_set("rtc_task_queue_stdlib") {
   ]
 }
 
+rtc_source_set("task_queue_global_factory") {
+  visibility = [ "*" ]
+  sources = [
+    #TODO(bugs.webrtc.org/10191): Move task_queue.cc to same target where
+    # task_queue.h is when support for link-time injection is dropped.
+    "task_queue.cc",
+    "task_queue_global_factory.cc",
+  ]
+  public = [
+    "task_queue_global_factory.h",
+  ]
+  deps = [
+    ":checks",
+    ":rtc_task_queue_api",
+    "../api/task_queue:task_queue_default_factory",
+    "../api/task_queue:task_queue_factory",
+  ]
+}
+
 rtc_source_set("rtc_task_queue_impl") {
   visibility = [ "*" ]
   if (rtc_enable_libevent) {
