Replace the usage of RTC_HISTOGRAM_COMMON_BLOCK with RTC_HISTOGRAM_COMMON_BLOCK_SLOW
Change-Id: I89660156b4711da50bdf449c615d2beff1c9ee81

--- a/p2p/BUILD.gn
+++ b/p2p/BUILD.gn
@@ -79,6 +79,18 @@ rtc_static_library("rtc_p2p") {
     "base/relay_port.cc",
     "base/relay_port.h",
     "base/relayport.h",
+    "base/sim_config.cc",
+    "base/sim_config.h",
+    "base/sim_core.cc",
+    "base/sim_core.h",
+    "base/sim_interface.cc",
+    "base/sim_interface.h",
+    "base/sim_link.cc",
+    "base/sim_link.h",
+    "base/sim_packet.cc",
+    "base/sim_packet.h",
+    "base/sim_stun_server.cc",
+    "base/sim_stun_server.h",
     "base/stun.cc",
     "base/stun.h",
     "base/stun_port.cc",
@@ -205,6 +217,8 @@ if (rtc_include_tests) {
       "base/regathering_controller_unittest.cc",
       "base/relay_port_unittest.cc",
       "base/relay_server_unittest.cc",
+      "base/simicegathering_unittests.cc",
+      "base/simicetransport_unittests.cc",
       "base/stun_port_unittest.cc",
       "base/stun_request_unittest.cc",
       "base/stun_server_unittest.cc",
