--- a/api/task_queue/BUILD.gn
+++ b/api/task_queue/BUILD.gn
@@ -26,11 +26,60 @@ rtc_source_set("task_queue_factory") {
   ]
   sources = [
     "task_queue_base.cc",
+    "task_queue_impl.cc",
+    "task_queue_impl.h",
   ]
 
   deps = [
     ":task_queue",
+    "../../rtc_base:checks",
+    "../../rtc_base:rtc_task_queue_api",
     "//third_party/abseil-cpp/absl/base:core_headers",
     "//third_party/abseil-cpp/absl/strings",
+  ]
+}
+
+rtc_source_set("default_task_queue_factory") {
+  # TODO(bugs.webrtc.org/10191): Make public when implemented for all
+  # supported platforms.
+  visibility = [ ":global_task_queue_factory" ]
+  public = [
+    "default_task_queue_factory.h",
+  ]
+  deps = [
+    ":task_queue_factory",
+    "../../rtc_base:checks",
+    "//third_party/abseil-cpp/absl/memory",
+    "//third_party/abseil-cpp/absl/strings",
+  ]
+  if (rtc_enable_libevent) {
+    sources = [
+      "default_task_queue_factory_libevent.cc",
+    ]
+    deps += [ "../../rtc_base:rtc_task_queue_libevent" ]
+  } else if (is_mac || is_ios) {
+    sources = [
+      "default_task_queue_factory_gcd.cc",
+    ]
+    deps += [ "../../rtc_base:rtc_task_queue_gcd" ]
+  } else {
+    sources = [
+      "default_task_queue_factory.cc",
+    ]
+  }
+}
+
+rtc_source_set("global_task_queue_factory") {
+  # TODO(danilchap): Remove this target when task queue factory propagated to
+  # all components that create TaskQueues.
+  visibility = [ "*" ]
+  sources = [
+    "global_task_queue_factory.cc",
+    "global_task_queue_factory.h",
+  ]
+  deps = [
+    ":default_task_queue_factory",
+    ":task_queue_factory",
+    "../../rtc_base:checks",
   ]
 }
