--- a/modules/congestion_controller/goog_cc/BUILD.gn
+++ b/modules/congestion_controller/goog_cc/BUILD.gn
@@ -43,6 +43,7 @@ rtc_static_library("goog_cc") {
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:alr_experiment",
     "../../../rtc_base/experiments:field_trial_parser",
+    "../../../rtc_base/experiments:video_rate_control_experiments",
     "../../../system_wrappers",
     "../../../system_wrappers:field_trial",
     "../../bitrate_controller",
@@ -75,6 +76,7 @@ rtc_source_set("pushback_controller") {
     "../../../api/units:data_size",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
+    "../../../rtc_base/experiments:video_rate_control_experiments",
     "../../../system_wrappers:field_trial",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
