Move congestion window field trial parsing to new class.
This cl is part of work to move several experiments into a joint
experiment group. Most of them vill be ralted to video, hence the name.

Bug: webrtc:10223
Change-Id: I8767c43abb6aa910ab51710eeb908e0f9df1e296

--- a/modules/congestion_controller/BUILD.gn
+++ b/modules/congestion_controller/BUILD.gn
@@ -37,15 +37,16 @@ rtc_static_library("congestion_controller") {
     ":transport_feedback",
     "..:module_api",
     "../..:webrtc_common",
-    "../../api/transport:field_trial_based_config",
     "../../api/transport:network_control",
-    "../../api/transport:webrtc_key_value_config",
     "../../api/units:data_rate",
     "../../api/units:timestamp",
     "../../rtc_base:checks",
     "../../rtc_base:deprecation",
     "../../rtc_base:ptr_util",
     "../../rtc_base:rate_limiter",
+    "../../rtc_base/experiments:field_trial_based_config",
+    "../../rtc_base/experiments:video_rate_control_experiments",
+    "../../rtc_base/experiments:webrtc_key_value_config",
     "../../rtc_base/network:sent_packet",
     "../../system_wrappers",
     "../../system_wrappers:field_trial",
