--- a/modules/congestion_controller/goog_cc/BUILD.gn
+++ b/modules/congestion_controller/goog_cc/BUILD.gn
@@ -32,9 +32,7 @@ rtc_static_library("goog_cc") {
     ":pushback_controller",
     "../..:module_api",
     "../../..:webrtc_common",
-    "../../../api/transport:field_trial_based_config",
     "../../../api/transport:network_control",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../api/units:data_rate",
     "../../../api/units:data_size",
     "../../../api/units:time_delta",
@@ -44,7 +42,10 @@ rtc_static_library("goog_cc") {
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:alr_experiment",
+    "../../../rtc_base/experiments:field_trial_based_config",
     "../../../rtc_base/experiments:field_trial_parser",
+    "../../../rtc_base/experiments:video_rate_control_experiments",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../../system_wrappers",
     "../../bitrate_controller",
     "../../remote_bitrate_estimator",
@@ -73,10 +74,11 @@ rtc_source_set("pushback_controller") {
   ]
   deps = [
     "../../../api/transport:network_control",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../api/units:data_size",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
+    "../../../rtc_base/experiments:video_rate_control_experiments",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "//third_party/abseil-cpp/absl/types:optional",
   ]
 }
@@ -88,12 +90,12 @@ rtc_source_set("alr_detector") {
   ]
   deps = [
     "../../..:webrtc_common",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../logging:rtc_event_log_api",
     "../../../logging:rtc_event_pacing",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:alr_experiment",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../pacing:interval_budget",
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -116,7 +118,6 @@ rtc_source_set("estimators") {
   ]
 
   deps = [
-    "../../../api/transport:webrtc_key_value_config",
     "../../../api/units:data_rate",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
@@ -125,6 +126,7 @@ rtc_source_set("estimators") {
     "../../../rtc_base:rtc_numerics",
     "../../../rtc_base:safe_minmax",
     "../../../rtc_base/experiments:field_trial_parser",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../remote_bitrate_estimator",
     "../../rtp_rtcp:rtp_rtcp_format",
     "//third_party/abseil-cpp/absl/memory",
@@ -144,12 +146,12 @@ rtc_source_set("delay_based_rate_controller") {
     ":estimators",
     ":link_capacity_estimator",
     "../../../api/transport:network_control",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:field_trial_parser",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../../system_wrappers:metrics",
     "//third_party/abseil-cpp/absl/memory",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -166,12 +168,12 @@ rtc_source_set("delay_based_bwe") {
   deps = [
     ":estimators",
     "../../../api/transport:network_control",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../logging:rtc_event_bwe",
     "../../../logging:rtc_event_log_api",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
     "../../../rtc_base/experiments:field_trial_parser",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../../system_wrappers:metrics",
     "../../pacing",
     "../../remote_bitrate_estimator",
@@ -189,7 +191,6 @@ rtc_source_set("probe_controller") {
 
   deps = [
     "../../../api/transport:network_control",
-    "../../../api/transport:webrtc_key_value_config",
     "../../../api/units:data_rate",
     "../../../api/units:time_delta",
     "../../../api/units:timestamp",
@@ -197,6 +198,7 @@ rtc_source_set("probe_controller") {
     "../../../logging:rtc_event_pacing",
     "../../../rtc_base:checks",
     "../../../rtc_base:rtc_base_approved",
+    "../../../rtc_base/experiments:webrtc_key_value_config",
     "../../../rtc_base/system:unused",
     "../../../system_wrappers:metrics",
     "//third_party/abseil-cpp/absl/types:optional",
@@ -251,11 +253,9 @@ if (rtc_include_tests) {
       ":goog_cc",
       ":probe_controller",
       ":pushback_controller",
-      "../../../api/transport:field_trial_based_config",
       "../../../api/transport:goog_cc",
       "../../../api/transport:network_control",
       "../../../api/transport:network_control_test",
-      "../../../api/transport:webrtc_key_value_config",
       "../../../api/units:data_rate",
       "../../../api/units:timestamp",
       "../../../logging:mocks",
@@ -263,6 +263,8 @@ if (rtc_include_tests) {
       "../../../rtc_base:rtc_base_approved",
       "../../../rtc_base:rtc_base_tests_utils",
       "../../../rtc_base/experiments:alr_experiment",
+      "../../../rtc_base/experiments:field_trial_based_config",
+      "../../../rtc_base/experiments:webrtc_key_value_config",
       "../../../system_wrappers",
       "../../../test:field_trial",
       "../../../test:test_support",
@@ -293,11 +295,11 @@ if (rtc_include_tests) {
       "../../../api/transport:goog_cc",
       "../../../api/transport:network_control",
       "../../../api/transport:network_control_test",
-      "../../../api/transport:webrtc_key_value_config",
       "../../../logging:mocks",
       "../../../rtc_base:checks",
       "../../../rtc_base:rtc_base_approved",
       "../../../rtc_base/experiments:alr_experiment",
+      "../../../rtc_base/experiments:webrtc_key_value_config",
       "../../../system_wrappers",
       "../../../test:field_trial",
       "../../../test:test_support",
