--- a/modules/remote_bitrate_estimator/BUILD.gn
+++ b/modules/remote_bitrate_estimator/BUILD.gn
@@ -129,7 +129,6 @@ if (rtc_include_tests) {
       "..:module_api_public",
       "../..:webrtc_common",
       "../../api:libjingle_peerconnection_api",
-      "../../api/transport:field_trial_based_config",
       "../../api/transport:network_control",
       "../../logging:mocks",
       "../../rtc_base:checks",
@@ -139,6 +138,7 @@ if (rtc_include_tests) {
       "../../rtc_base:rtc_numerics",
       "../../rtc_base:safe_minmax",
       "../../rtc_base/experiments:alr_experiment",
+      "../../rtc_base/experiments:field_trial_based_config",
       "../../rtc_base/system:fallthrough",
       "../../rtc_base/system:unused",
       "../../system_wrappers",
