--- a/api/task_queue/BUILD.gn
+++ b/api/task_queue/BUILD.gn
@@ -26,10 +26,14 @@ rtc_source_set("task_queue_factory") {
   ]
   sources = [
     "task_queue_base.cc",
+    "task_queue_impl.cc",
+    "task_queue_impl.h",
   ]
 
   deps = [
     ":task_queue",
+    "../../rtc_base:checks",
+    "../../rtc_base:rtc_task_queue_api",
     "//third_party/abseil-cpp/absl/base:core_headers",
     "//third_party/abseil-cpp/absl/strings",
   ]
@@ -40,13 +44,23 @@ rtc_source_set("default_task_queue_factory") {
   # supported platforms.
   visibility = [ ":global_task_queue_factory" ]
   sources = [
-    "default_task_queue_factory.cc",
     "default_task_queue_factory.h",
   ]
   deps = [
     ":task_queue_factory",
     "../../rtc_base:checks",
+    "//third_party/abseil-cpp/absl/memory",
+    "//third_party/abseil-cpp/absl/strings",
   ]
+  if (rtc_enable_libevent) {
+    sources += [ "default_task_queue_factory_libevent.cc" ]
+    deps += [ "../../rtc_base:rtc_task_queue_libevent" ]
+  } else if (is_mac || is_ios) {
+    sources += [ "default_task_queue_factory_gcd.cc" ]
+    deps += [ "../../rtc_base:rtc_task_queue_gcd" ]
+  } else {
+    sources += [ "default_task_queue_factory.cc" ]
+  }
 }
 
 rtc_source_set("global_task_queue_factory") {
@@ -56,10 +70,16 @@ rtc_source_set("global_task_queue_factory") {
   sources = [
     "global_task_queue_factory.cc",
     "global_task_queue_factory.h",
+
+    # TODO(bugs.webrtc.org/10191): Move task_queue.cc to private build
+    # "task_queue" when "task_queue_api", "task_queue", and "task_queue_impl"
+    # can be joined.
+    "task_queue.cc",
   ]
   deps = [
     ":default_task_queue_factory",
     ":task_queue_factory",
     "../../rtc_base:checks",
+    "../../rtc_base:rtc_task_queue_api",
   ]
 }
