--- a/api/task_queue/BUILD.gn
+++ b/api/task_queue/BUILD.gn
@@ -35,10 +35,32 @@ rtc_source_set("task_queue_factory") {
   ]
 }
 
+rtc_source_set("task_queue_test") {
+  visibility = [ "*" ]
+  testonly = true
+  sources = [
+    "task_queue_test.cc",
+    "task_queue_test.h",
+  ]
+  deps = [
+    ":task_queue",
+    ":task_queue_factory",
+    "../../rtc_base:rtc_event",
+    "../../rtc_base:rtc_task_queue_api",
+    "../../rtc_base:timeutils",
+    "../../test:test_support",
+    "//third_party/abseil-cpp/absl/memory",
+    "//third_party/abseil-cpp/absl/strings",
+  ]
+}
+
 rtc_source_set("default_task_queue_factory") {
   # TODO(bugs.webrtc.org/10191): Make public when implemented for all
   # supported platforms.
-  visibility = [ ":global_task_queue_factory" ]
+  visibility = [
+    ":global_task_queue_factory",
+    ":task_queue_default_unittests",
+  ]
   sources = [
     "default_task_queue_factory.cc",
     "default_task_queue_factory.h",
@@ -47,6 +69,20 @@ rtc_source_set("default_task_queue_factory") {
     ":task_queue_factory",
     "../../rtc_base:checks",
   ]
+}
+
+if (rtc_include_tests) {
+  rtc_source_set("task_queue_default_unittests") {
+    testonly = true
+    sources = [
+      "default_task_queue_unittest.cc",
+    ]
+    deps = [
+      ":default_task_queue_factory",
+      ":task_queue_test",
+      "../../test:test_support",
+    ]
+  }
 }
 
 rtc_source_set("global_task_queue_factory") {
