Pass frame generator to the AddVideoConfig method in the pc framework tests.
Change-Id: I448a049c7c00c0586d77cc892d339db6a032f322

--- a/test/pc/e2e/BUILD.gn
+++ b/test/pc/e2e/BUILD.gn
@@ -422,6 +422,7 @@ if (rtc_include_tests) {
       ":default_video_quality_analyzer",
       ":network_quality_metrics_reporter",
       "../../../api:callfactory_api",
+      "../../../api:create_frame_generator",
       "../../../api:create_network_emulation_manager",
       "../../../api:create_peerconnection_quality_test_fixture",
       "../../../api:libjingle_peerconnection_api",
