QP scaler experiment added for count scaling
Bug: webrtc:11522
Change-Id: Ia09ccb87d1c823a06fe8a71ce5e366d58416dbaf
Fixed: 11522

--- a/call/adaptation/BUILD.gn
+++ b/call/adaptation/BUILD.gn
@@ -48,6 +48,7 @@ if (rtc_include_tests) {
 
     sources = [
       "resource_unittest.cc",
+      "video_source_restrictions_unittest.cc",
       "video_stream_adapter_unittest.cc",
     ]
     deps = [
