--- a/api/audio/BUILD.gn
+++ b/api/audio/BUILD.gn
@@ -87,3 +87,17 @@ rtc_source_set("echo_control") {
   sources = [ "echo_control.h" ]
   deps = [ "../../rtc_base:checks" ]
 }
+
+rtc_source_set("residual_echo_detector") {
+  visibility = [ "*" ]
+  sources = [
+    "residual_echo_detector.cc",
+    "residual_echo_detector.h",
+  ]
+  deps = [
+    "../../api:scoped_refptr",
+    "../../modules/audio_processing:api",
+    "../../modules/audio_processing:residual_echo_detector",
+    "../../rtc_base:refcount",
+  ]
+}
